--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
@@ -16,6 +18,20 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 xcuserdata/
+
+# Build artifacts
+.build/
+
+# Xcode specific files (if using Xcode with SwiftPM)
+*.xcodeproj/xcuserdata/
+*.xcworkspace/xcuserdata/
+.swiftpm/xcode/package.xcworkspace/xcuserdata/
+
+# Swift Package Manager specific generated files
+# .swiftpm/ is often committed for dependency resolution consistency,
+# but specific subdirectories might be ignored for local temporary data.
+# For example, if you want to ignore the generated Xcode project within .swiftpm:
+# .swiftpm/xcode/
 
 ## Other
 *.moved-aside
