--- a/UPCarouselFlowLayoutDemo.xcodeproj/xcshareddata/xcschemes/UPCarouselFlowLayoutDemo.xcscheme
+++ b/UPCarouselFlowLayoutDemo.xcodeproj/xcshareddata/xcschemes/UPCarouselFlowLayoutDemo.xcscheme
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1000"
-   version = "1.3">
+   LastUpgradeVersion = "1640"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
+      buildImplicitDependencies = "YES"
+      buildArchitectures = "Automatic">
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -14,9 +15,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "841C94FC1DDEE57F00B997F5"
-               BuildableName = "UPCarouselFlowLayout.framework"
-               BlueprintName = "UPCarouselFlowLayout"
+               BlueprintIdentifier = "01D3876A1D1C4B9D00CE4E1F"
+               BuildableName = "UPCarouselFlowLayoutDemo.app"
+               BlueprintName = "UPCarouselFlowLayoutDemo"
                ReferencedContainer = "container:UPCarouselFlowLayoutDemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,11 +27,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -42,17 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "841C94FC1DDEE57F00B997F5"
-            BuildableName = "UPCarouselFlowLayout.framework"
-            BlueprintName = "UPCarouselFlowLayout"
+            BlueprintIdentifier = "01D3876A1D1C4B9D00CE4E1F"
+            BuildableName = "UPCarouselFlowLayoutDemo.app"
+            BlueprintName = "UPCarouselFlowLayoutDemo"
             ReferencedContainer = "container:UPCarouselFlowLayoutDemo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -60,15 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "841C94FC1DDEE57F00B997F5"
-            BuildableName = "UPCarouselFlowLayout.framework"
-            BlueprintName = "UPCarouselFlowLayout"
+            BlueprintIdentifier = "01D3876A1D1C4B9D00CE4E1F"
+            BuildableName = "UPCarouselFlowLayoutDemo.app"
+            BlueprintName = "UPCarouselFlowLayoutDemo"
             ReferencedContainer = "container:UPCarouselFlowLayoutDemo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
